# python-project-skeleton

./: .appveyor.yml  .bumpversion.cfg  .codacy.yaml  .codeclimate.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.rst
.github/workflows/: build.yml  ci-testing.yml  ci.yml  docs.yml  lint.yml  pr.yml  python_package_pypi.yml  test.yml  tests.yml  version-bump-and-package.yml  version_bump.yml
devtools/: check_changelog.py  docs_requirements.txt  docs_tests.py  requirements.txt
docs/: .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  PULLREQUEST.rst  conf.py  configuration.rst  contributing.rst  how_to_use_the_template.rst  index.rst  installation.rst  requirements.txt  spelling_wordlist.txt  the_rationale_behind.rst  usage.rst
docs/nonlisted/: ci_platforms.rst  configuration_files.rst  i_badges.rst  i_ci_platforms.rst  project_layout.rst  readthedocs.rst
docs/reference/: index.rst  main.rst  sampleproject.rst  sampleproject_amodule.rst
docs/rst/: conf.py  configuration.rst  contributing.rst  how_to_use_the_template.rst  i_badges.rst  i_branch_organization.rst  i_ci_platforms.rst  i_configuration_files.rst  i_deployment.rst  i_project_layout.rst  i_readthedocs.rst  index.rst  installation.rst  the_rationale_behind.rst  usage.rst
docs/rst/reference/: index.rst  sampleproject_libs.rst
src/: amodule.py
src/sampleproject/: __init__.py  __main__.py  cli_int1.py
src/sampleproject/libs/: __init__.py  samplemodule.py
tests/: __init__.py  test_1.py  test_cli.py
