[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "wheel"]

[project]
name = "jmct-sampleproject"
version = "0.11.2"
description = "A skeleton template for Python projects."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Joao Miguel Correia Teixeira", email = "joaomcteixeira@gmail.com"},
]

# complete classifier list:
# http://pypi.org/classifiers/
classifiers = [
    'Development Status :: 4 - Beta',
    # 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Operating System :: Microsoft',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

keywords=[
    'ci', 'continuous-integration', 'project-template', 'project-skeleton',
    'sample-project',
    # eg: 'keyword1', 'keyword2', 'keyword3',
]

requires-python = ">=3.8, <4"
dependencies = [
    # https://stackoverflow.com/questions/14399534
    'matplotlib>=3',
]


[project.urls]
homepage = "https://github.com/joaomcteixeira/python-project-skeleton"
documentation = "https://python-project-skeleton.readthedocs.io/en/latest/"
repository = "https://github.com/joaomcteixeira/python-project-skeleton.git"
changelog = "https://github.com/joaomcteixeira/python-project-skeleton/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
# e.g.:
# rst = [ "docutils>=0.11" ]

[project.scripts]
samplecli1 = "sampleproject.cli_int1:main"
